--- a/index.html
+++ b/index.html
@@ -84,23 +84,10 @@
             <div id="lesson-card" class="grid grid-cols-3 gap-5 mx-10 p-10">
 
             </div>
-            <!-- <div class="grid grid-cols-3 gap-5 mx-10 bg-gray-100 p-10">
-                <div class="bg-white py-5 flex flex-col border-white shadow-md  text-lg poppins items-center rounded-xl gap-5">
-                 <p class="font-semibold text-2xl">Eager</p>
-                 <p>Meaning/Pronounciation</p>
-                 <p class="text-gray-500">"আগ্রহী/ইগার"</p>
-                 <div class="flex w-full px-5 justify-between">
-                    <div>
-                        <button class="btn"><i class="fa-solid fa-circle-info"></i></button>
-                    </div>
-                    <div>
-                        <button class="btn"><i class="fa-solid fa-volume-high"></i></button>
-                    </div>
-                 </div>
-                </div>
-            </div> -->
+        
             
          </section>
+
 
          <!-- FAQ Section -->
           <section id="question" class="poppins flex flex-col items-center gap-8 p-8 my-50">
@@ -108,28 +95,36 @@
             <div class="join join-vertical">
                 <div class="collapse collapse-arrow join-item border-base-300 border">
                     <input type="radio" name="my-accordion-4" checked="checked" />
-                    <div class="collapse-title font-semibold">1. How can I start learning English on this website?</div>
-                    <div class="collapse-content text-sm">At first login in our website then start exploring the levels from learn section.</div>
+                    <div class="collapse-title font-semibold">1.The difference between var, let, and const?</div>
+                    <div class="collapse-content text-sm">Var is function-scoped and can be redeclared or updated.
+                    let and const are block-scoped-let can be updated, but const cannot be reassigned.
+                    </div>
                 </div>
                 <div class="collapse collapse-arrow join-item border-base-300 border">
                     <input type="radio" name="my-accordion-4" />
-                    <div class="collapse-title font-semibold">2. Is this website free to use?</div>
-                    <div class="collapse-content text-sm">Yes, You can use it offline.</div>
+                    <div class="collapse-title font-semibold">2.The difference between map(), forEach(), and filter()?</div>
+                    <div class="collapse-content text-sm">forEach() executes a function on each array element but returns nothing.
+                    map()returns a new array with transformed elements, while filter()returns a new array with elements that pass a condition.
+                    forEach() executes a function on each array element but returns nothing.
+                    map() returns a new array with transformed elements, while filter() returns a new array with elements that pass a condition.
+</div>
                 </div>
                 <div class="collapse collapse-arrow join-item border-base-300 border">
                     <input type="radio" name="my-accordion-4" />
-                    <div class="collapse-title font-semibold">3. Do I need to create an account?</div>
-                    <div class="collapse-content text-sm">Yes, In the front page you will see input field there you have to put your information if you are using it for the first time.</div>
+                    <div class="collapse-title font-semibold">3. Explain arrow functions and how they are different from regular functions.</div>
+                    <div class="collapse-content text-sm">Arrow functions are a concise way to write functions using =>, they inherit this from the surrounding context, don’t have their own arguments, and cannot be used as constructors, unlike regular functions.
+</div>
                 </div>
                 <div class="collapse collapse-arrow join-item border-base-300 border">
                     <input type="radio" name="my-accordion-4" />
-                    <div class="collapse-title font-semibold">4. How can I build my English vocabulary?</div>
-                    <div class="collapse-content text-sm">There are some levels where you can check your vocabulary by testing yourself through the questions.</div>
+                    <div class="collapse-title font-semibold">4.how JavaScript Promises work?</div>
+                    <div class="collapse-content text-sm">JavaScript Promises represent an asynchronous operation that can resolve with a value or reject with an error, allowing .then() and .catch() to handle the results.
+</div>
                 </div>
                 <div class="collapse collapse-arrow join-item border-base-300 border">
                     <input type="radio" name="my-accordion-4" />
-                    <div class="collapse-title font-semibold"> 5. Do you offer certificates for completed courses?</div>
-                    <div class="collapse-content text-sm">Right now we don't but in future we are planning to do it.</div>
+                    <div class="collapse-title font-semibold"> 5.How closures work in JavaScript?</div>
+                    <div class="collapse-content text-sm">Closures in JavaScript occur when a function remembers and can access variables from its outer scope even after that outer function has finished executing.</div>
                 </div>
             </div>
           </section>
